ready to deploy

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,261 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
+:root
+{
   box-sizing: border-box;
+  --header-bg: hsl(210deg, 50%, 50%);
+  --blue: hsl(210deg, 50%, 35%);
+  --white: rgb(238, 252, 255);
+  --body-bg: hsl(210deg, 50%, 95%);
+  --dark-grey: hsl(0deg, 0%, 20%);
+  --dark-violet: hsl(260deg, 70%, 20%);
 }
+
+*,
+*::before,
+*::after
+{
+  box-sizing: inherit;
+}
+
+a:link
+{
+  color: var(--dark-grey);
+}
+a:visited
+{
+  color: var(--dark-violet);
+}
+a:active
+{
+  color: crimson;
+}
+
+
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  background-color: var(--body-bg);
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.container
+{
+  max-width: 1180px;
+  margin: 0 auto;
+  padding: .5em;
+}
+
+.header
+{
+  background-color: var(--header-bg);
+  border-bottom: .15em solid var(--blue);
+}
+
+.header__content
+{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header__content > div
+{
+  display: flex;
+  align-items: center;
+}
+
+.header__content .logo
+{
+  padding: 1.5em;
+  border-radius: 50%;
+  background-image: url("/sephiroth.jpg");
+  border: .15em solid var(--blue);
+  background-position-x: -1.5em;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.header__content .toHome
+{
+  margin-left: .5em;
+  text-decoration: none;
+  color: var(--white);
+  font-size: .8rem;
+}
+
+.header__content .student
+{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  color: var(--white);
+  text-align: right;
+  padding: 1em 0em;
+}
+
+.header__content .student p
+{
+  margin: 0;
+  font-size: .8rem;
+}
+
+@media (min-width: 600px) {
+  .header__content .logo
+  {
+    padding: 2em;
+    background-position-x: -1.8em;
+  }
+
+  .header__content .toHome
+  {
+    font-size: 1.3rem;
+  }
+
+  .header__content .student p
+  {
+    font-size: 1.2rem;
+  }
+}
+
+/* Article styles */
+.heading
+{
+  text-align: center;
+  font-size: 1.4rem;
+  margin: .5em;
+}
+
+.paragraph
+{
+  text-align: justify;
+  line-height: 1.5;
+  margin: 0;
+}
+
+.list
+{
+  display: flex;
+  list-style-type: circle;
+}
+
+.list.vertical
+{
+  flex-direction: column;
+}
+
+.list.centered
+{
+  padding: 0em 5em;
+}
+
+.list > li
+{
+  font-style: oblique;
+}
+
+.list > li + li
+{
+  margin-top: .2rem;
+}
+
+@media (min-width: 600px) {
+  .heading 
+  {
+    font-size: 2.5rem;
+  }
+  
+  .paragraph
+  {
+    font-size: 1.1rem;
+  }
+
+  .list.centered
+  {
+    padding: 0em 10em;
+  }
+}
+
+@media (min-width: 1180px) {
+  .list.centered
+  {
+    padding: 0em 27em;
+  }
+}
+
+.road-map
+{
+  padding: 0;
+  display: flex;
+  justify-content: space-around;
+  list-style: none;
+}
+
+.road-map > .road-map__item
+{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: .8rem;  
+}
+
+.road-map > .road-map__item > .circle
+{
+  display: flex;
+  width: 1.3em;
+  justify-content: center;
+  align-items: center;
+  height: 1.3em;
+  border: .15em solid rgb(78, 78, 78);
+  border-radius: 50%;
+  margin-bottom: .3em;
+}
+
+.road-map > .road-map__item > .circle.active::after
+{
+  content: "";
+  width: .8em;
+  height: .8em;
+  background-color: rgb(78, 78, 78);
+  border-radius: 50%;
+}
+
+/* .road-map > .road-map__item > .circle.active
+{
+  background-color: rgb(240, 126, 50);
+} */
+
+/* Util styles */
+
+.whitespace
+{
+  padding-left: 1.5em;
+}
+
+.more
+{
+  padding: 1em 0em;
+  display: flex;
+  justify-content: space-between;
+}
+.more > a
+{
+  text-decoration: none;
+  border-bottom: .07em solid var(--dark-violet);
+}
+.more > a:active
+{
+  border-bottom: .07em solid crimson;
+}
+
+.italic
+{
+  font-style: italic;
+}
+
+.bold
+{
+  font-weight: bold;
+}
+
