--- a/styles/globals.css
+++ b/styles/globals.css
@@ -85,6 +85,14 @@ body {
   font-size: .8rem;
 }
 
+.header__content .toArticles
+{
+  margin-left: 1em;
+  text-decoration: none;
+  color: var(--white);
+  font-size: .8rem;
+}
+
 .header__content .student
 {
   display: flex;
@@ -109,6 +117,11 @@ body {
   }
 
   .header__content .toHome
+  {
+    font-size: 1.3rem;
+  }
+
+  .header__content .toArticles
   {
     font-size: 1.3rem;
   }
@@ -184,6 +197,8 @@ body {
   }
 }
 
+/* RoadMap */
+
 .road-map
 {
   padding: 0;
@@ -198,6 +213,7 @@ body {
   flex-direction: column;
   align-items: center;
   font-size: .8rem;  
+  text-align: center;
 }
 
 .road-map > .road-map__item > .circle
@@ -221,10 +237,139 @@ body {
   border-radius: 50%;
 }
 
-/* .road-map > .road-map__item > .circle.active
+/* About Me */
+
+.about_me
 {
-  background-color: rgb(240, 126, 50);
-} */
+  background-image: url("/space.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.about_me__content
+{
+  color: var(--white);
+  text-shadow: .0em .08em .06em rgb(17, 32, 75);
+  font-size: .8rem;
+}
+
+.about_me__heading
+{
+  margin: 0;
+}
+
+.about_me__paragraph
+{
+  text-align: justify;  
+}
+
+.about_me__list
+{
+  padding-left: 2em;
+}
+
+@media (min-width: 600px) {
+  .about_me
+  {
+    background-position-y: -2em; 
+    padding: 1em;
+  }
+
+  .about_me__content
+  {
+    color: var(--white);
+    text-shadow: .0em .08em .06em rgb(17, 32, 75);
+    font-size: 1rem;
+  }
+
+  .about_me__list
+  {
+    padding: 0em 0em 0em 2em;
+  }
+}
+
+@media (min-width: 1180px) {
+  .about_me
+  {
+    min-height: 100vh;
+  }
+
+  .about_me__content
+  {
+    color: var(--white);
+    text-shadow: .0em .08em .06em rgb(17, 32, 75);
+    padding: 1em;
+    font-size: 1.3rem;
+  }
+}
+
+/* Cards */
+
+.cards
+{
+  display: flex;
+  justify-content: center;
+  padding: 2em 0em 2em 0em;
+}
+
+.cards .card
+{
+  padding: 1em;
+  border-radius: .5em;
+  text-align: center;
+  box-shadow: 0em 0em .5em .1em rgb(143, 143, 143);
+}
+
+.cards .card + .card
+{
+  margin-left: 1em;
+}
+
+.cards .card .icon
+{
+  max-width: 5em;
+  max-height: 6em;
+  margin: 0;
+}
+
+.cards .card .card__link
+{
+  color: rgb(83, 71, 163);
+  font-size: .8rem;
+  display: block;
+  text-decoration: none;
+}
+
+.cards .card .card__link:hover
+{
+  text-decoration: underline;
+}
+
+@media (min-width: 600px) {
+  .cards .card .card__link
+  {
+    font-size: 1rem;
+  }
+
+  .cards .card .icon
+  {
+    max-width: 9em;
+    max-height: 10em;
+  }
+}
+
+@media (min-width: 1180px) {
+  .cards .card .card__link
+  {
+    font-size: 1.1rem;
+  }
+
+  .cards .card .icon
+  {
+    max-width: 11em;
+    max-height: 12em;
+  }
+}
 
 /* Util styles */
 
